# debugger

./: .cvs_version  .cvsignore  .gitignore  .svn_version  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.FreeBSD  README.build  README.win32  RELEASE-NOTES-0.1.0.txt  RELEASE-NOTES-0.2.0.txt  RELEASE-NOTES-0.2.1.txt  RELEASE-NOTES-0.2.2.txt  RELEASE-NOTES-0.3.txt  RELEASE-NOTES-0.6.txt  TODO  TODO.Martin  acinclude.m4  autogen.sh  build.sh  configure.in  mono-debugger-frontend.pc.in  mono-debugger.pc.in  mono-debugger.spec  mono-debugger.spec.in  winconfig.h
arch/: .cvsignore  Architecture.cs  ArchitectureI386.cs  ArchitecturePowerPC.cs  Architecture_I386.cs  Architecture_PowerPC.cs  Architecture_X86_64.cs  Bfd.cs  BfdContainer.cs  BfdDisassembler.cs  BfdModule.cs  BfdSymbolTable.cs  CoreFile.cs  CoreFileElfI386.cs  Disassembler.cs  DwarfFrameReader.cs  DwarfReader.cs  Makefile.am  StabsReader.cs  bfdglue.c  bfdglue.h  testbfd.c
backend/: BreakpointHandle.cs  BreakpointManager.cs  DebuggerServant.cs  EventQueue.cs  ILanguageBackend.cs  Inferior.cs  InternalTargetAccess.cs  Makefile.am  MonoThreadManager.cs  OldTargetAccess.cs  ProcessServant.cs  ProcessStart.cs  SingleSteppingEngine.cs  StepFrame.cs  SymbolTableManager.cs  TargetAccess.cs  TargetMemoryAccess.cs  TargetReader.cs  ThreadDB.cs  ThreadManager.cs  ThreadServant.cs
backends/: BreakpointHandle.cs  BreakpointManager.cs  DaemonThreadRunner.cs  Debugger.cs  DebuggerClient.cs  DebuggerServant.cs  IInferior.cs  ILanguageBackend.cs  Inferior.cs  Makefile.am  ModuleManager.cs  MonoThreadManager.cs  NativeProcess.cs  Process.cs  ProcessServant.cs  ProcessStart.cs  SingleSteppingEngine.cs  StackFrame.cs  StepFrame.cs  SymbolTableManager.cs  TargetAccess.cs  TargetMemoryAccess.cs  TargetMemoryArea.cs  TargetReader.cs  TargetStackLocation.cs  Thread.cs  ThreadBase.cs  ThreadManager.cs  ThreadServant.cs
classes/: AbsoluteTargetLocation.cs  AddressBreakpoint.cs  AddressDomain.cs  AssemblerMethod.cs  AsyncQueue.cs  Backtrace.cs  Block.cs  Breakpoint.cs  BreakpointHandle.cs  CSharpMethod.cs  CSharpMethodBase.cs  CSharpSymbolTable.cs  CatchpointHandle.cs  Debugger.cs  DebuggerConfiguration.cs  DebuggerConfiguration.xsd  DebuggerOptions.cs  DebuggerSession.cs  DebuggerSession.xsd  DebuggerTextWriter.cs  Disassembler.cs  Event.cs  EventHandle.cs  ExceptionCatchPoint.cs  ExpressionBreakpoint.cs  ExpressionEvaluator.cs  GUIManager.cs  GnuReadLine.cs  Heap.cs  ILDisassembler.cs  ILMethod.cs  IOChannel.cs  ISymbolFile.cs  ISymbolTable.cs  LineNumberTable.cs  MainMethodBreakpoint.cs  Makefile.am  Method.cs  MethodBase.cs  MethodSource.cs  (+46 more)
cslex/: Accept.cs  Alloc.cs  Anchor.cs  BitSet.cs  Bunch.cs  CharSet.cs  DTrans.cs  Dfa.cs  Emit.cs  Error.cs  Gen.cs  Input.cs  Lex.cs  MakeNfa.cs  Makefile.am  Minimize.cs  Nfa.cs  Nfa2Dfa.cs  NfaPair.cs  SimplifyNFA.cs  Spec.cs  Utility.cs
doc/: .cvsignore  .gitignore  FAQ.txt  GC-issues.txt  Makefile.am  README.breakpoints  README.threading-model  SSE-design.txt  breakpoints.txt  debugger-status.txt  debugger.sxi  guadec-abstract.txt  gui-issues.txt  martin-master.patch  martin-threading-changes.patch  misc-notes.txt  roadmap.txt  sse-notes.txt  thread-design.txt  trampolines.diff  unmanaged-applications.txt  user-manual.texi
frontend/: .gitignore  CL.cs  CSharpExpressionParser.cs.win  CSharpExpressionParser.jay  CSharpTokenizer.cs  CSharpTokenizer.lex  Command.cs  Completer.cs  Displays.cs  Expression.cs  ExpressionParser.cs  ExpressionParser.jay  GnuReadLine.cs  IExpressionParser.cs  Interpreter.cs  LineReader.cs  Main.cs  Makefile.am  ManagedReadLine.cs  ObjectFormatter.cs  ScriptingContext.cs  Session.cs  Style.cs  Tokenizer.cs  getline.cs
glue/: Makefile.am  iochannel.c  mono-debugger-glue.h  mono-debugger-readline.c  mono-debugger-readline.h
interfaces/: IArchitecture.cs  IBreakPoint.cs  IDebuggerBackend.cs  IDisassembler.cs  IEventHandle.cs  IInferior.cs  ILanguage.cs  ILanguageBackend.cs  ILanguageCSharp.cs  IMethod.cs  IModule.cs  IProcess.cs  ISourceBuffer.cs  ISourceFile.cs  ISourceLocation.cs  IStackFrame.cs  ISymbolFile.cs  ISymbolTable.cs  ITargetAccess.cs  ITargetArray.cs  ITargetArrayObject.cs  ITargetArrayType.cs  ITargetClassObject.cs  ITargetClassType.cs  ITargetEnumObject.cs  ITargetEnumType.cs  ITargetFunctionObject.cs  ITargetFunctionType.cs  ITargetFundamentalObject.cs  ITargetFundamentalType.cs  ITargetLocation.cs  ITargetMemoryAccess.cs  ITargetNotification.cs  ITargetObject.cs  ITargetPointerObject.cs  ITargetPointerType.cs  ITargetStructObject.cs  ITargetStructType.cs  ITargetType.cs  ITargetTypeAlias.cs  (+4 more)
jay/: ChangeLog  Makefile.am
languages/: AbsoluteTargetLocation.cs  BitfieldTargetLocation.cs  ClientSuppliedTargetLocation.cs  DereferencedTargetLocation.cs  Language.cs  Makefile.am  RelativeTargetLocation.cs  TargetArrayObject.cs  TargetArrayType.cs  TargetClass.cs  TargetClassObject.cs  TargetClassType.cs  TargetEnumObject.cs  TargetEnumType.cs  TargetFunctionType.cs  TargetFundamentalObject.cs  TargetFundamentalType.cs  TargetGenericInstanceObject.cs  TargetGenericInstanceType.cs  TargetLocation.cs  TargetMember.cs  TargetMethodFrameInfo.cs  TargetMethodSignature.cs  TargetNullObject.cs  TargetNullableObject.cs  TargetNullableType.cs  TargetObject.cs  TargetObjectKind.cs  TargetObjectObject.cs  TargetPointerObject.cs  TargetPointerType.cs  TargetStructObject.cs  TargetStructType.cs  TargetType.cs  TargetTypeAlias.cs  TargetVariable.cs
lib/: .cvsignore  Debugger.exe.config.in  Interpreter.exe.config.in  Makefile.am  Makefile.in  SymbolFileReader.cs  cscbuild.sh  mdb.in  mono-debug.in
test/: .cvsignore  .gitignore  A.cs  B.cs  C.cs  ContextMenu.cs  D.cmd  D.cs  Debugger.exe.config.in  E.cs  F.cs  Foo.cs  G.cs  GC.cs  H.cs  Hello.cs  I.cs  J.cs  K.cs  Makefile.am  Makefile.in  Monkey.cs  Mono.Debugger.Backend.dll.config.in  MultiThread.cs  N.cs  P.cs  Property.cs  R.cs  S.cs  Simple.cs  SymbolFileReader.cs  Test.cs  TestAppDomain.cs  TestAssembly.cs  TestBreakpoint.cs  TestByRef.cs  TestDelegate.cs  TestException.cs  TestIndexer.cs  (+23 more)
(+1352 files in other folders)
