SUBDIRS = jay interfaces languages classes arch backends frontend wrapper test

DIST_SUBDIRS= doc $(SUBDIRS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = mono-debugger.pc

EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.2.2.txt \
	     RELEASE-NOTES-0.3.txt README.FreeBSD README.build mono-debugger.pc.in \
	     RELEASE-NOTES-0.6.txt RELEASE-NOTES-0.7.txt RELEASE-NOTES-0.8.txt
