EXTRA_DIST = \
	AssemblerMethod.cs Backtrace.cs Breakpoint.cs Debugger.cs \
	DebuggerSession.cs Event.cs ExceptionCatchPoint.cs InternalError.cs Method.cs \
	MethodSource.cs Module.cs ObjectCache.cs Process.cs Semaphore.cs \
	SourceAddress.cs SourceBuffer.cs SourceFileFactory.cs SourceInfo.cs \
	SourceLocation.cs StackFrame.cs Style.cs SymbolTableCollection.cs \
	SymbolTable.cs SymbolTableException.cs TargetBinaryAccess.cs \
	TargetBinaryReader.cs TargetBinaryWriter.cs TargetEvent.cs TargetException.cs \
	TargetInvocationException.cs TargetMemoryArea.cs TargetMemoryException.cs \
	Thread.cs ThreadGroup.cs DebuggerOptions.cs \
	DebuggerConfiguration.cs DebuggerConfiguration.xsd \
	ISymbolTable.cs ITargetNotification.cs
