SUBDIRS = native mono

EXTRA_DIST = Language.cs TargetArrayObject.cs TargetArrayType.cs TargetClassObject.cs \
	TargetClassType.cs TargetEnumObject.cs TargetEnumType.cs TargetFunctionType.cs \
	TargetFundamentalObject.cs TargetFundamentalType.cs TargetMember.cs TargetObject.cs \
	TargetObjectKind.cs TargetObjectObject.cs TargetObjectType.cs TargetPointerObject.cs \
	TargetPointerType.cs TargetType.cs TargetVariable.cs

