SUBDIRS = native mono

EXTRA_DIST = \
	AbsoluteTargetLocation.cs \
	BitfieldTargetLocation.cs \
	ClientSuppliedTargetLocation.cs \
	DereferencedTargetLocation.cs \
	Language.cs \
	RelativeTargetLocation.cs \
	TargetArrayObject.cs \
	TargetArrayType.cs \
	TargetClassObject.cs \
	TargetClassType.cs \
	TargetEnumObject.cs \
	TargetEnumType.cs \
	TargetFunctionType.cs \
	TargetFundamentalObject.cs \
	TargetFundamentalType.cs \
	TargetLocation.cs \
	TargetMember.cs \
	TargetObject.cs \
	TargetObjectKind.cs \
	TargetObjectObject.cs \
	TargetObjectType.cs \
	TargetPointerObject.cs \
	TargetPointerType.cs \
	TargetType.cs \
	TargetVariable.cs
